# cppcourse-5

./: .gitignore  CMakeLists.txt  san_fail.cpp
scripts/: clean.sh  cmake.sh  dot-to-png.sh  kcachegrind.sh  make.sh  valgrind.sh  zip.sh
test/: output-1.txt
